Optimized algorithm to determine if the tabs needs to split, fixed issue if the dropdown needs to overlap

--- a/src/tabs/tabs.component.css
+++ b/src/tabs/tabs.component.css
@@ -70,7 +70,6 @@
     border: 0;
     height: 30px;
     border-top: 1px solid #cccccc;
-    max-width: 250px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
